--- a/webapp/css/styles.css
+++ b/webapp/css/styles.css
@@ -2,3 +2,15 @@
 li[data-todo-item-completed="true"] span {
 	text-decoration: line-through;
 }
+
+.myAppDemoWT .myCustomButton.sapMBtn {
+	margin-right: 0.125rem
+  }
+  
+  html[dir="rtl"] .myAppDemoWT .myCustomButton.sapMBtn {
+	margin-left: 0.125rem;
+	margin-right: 0 
+  }
+  .myAppDemoWT .myCustomText {
+	font-weight: bold;
+  }
