--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,15 +1,22 @@
 <mvc:View
-   controllerName="sample-app.controller.App"
-   xmlns="sap.m"
-   xmlns:mvc="sap.ui.core.mvc"
-   displayBlock="true" >
-   <App class="sapUiDemoWT">
-      <pages>
-         <Page title="{i18n>homePageTitle}">
-            <content>
-               <mvc:XMLView viewName="sample-app.view.HelloPanel"/>
-            </content>
-         </Page>
-      </pages>
-   </App>
+    controllerName="sample-app.controller.App"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true"
+>
+    <App class="sapUiDemoWT">
+        <pages>
+            <Page title="{i18n>homePageTitle}">
+                <headerContent>
+                    <Button
+                        icon="sap-icon://hello-world"
+                        press="onOpenDialog"
+                    />
+                </headerContent>
+                <content>
+                    <mvc:XMLView viewName="sample-app.view.HelloPanel" />
+                </content>
+            </Page>
+        </pages>
+    </App>
 </mvc:View>
