--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,23 +1,7 @@
 <mvc:View
-    controllerName="sample-app.controller.App"
-    xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc"
-    displayBlock="true"
->
-    <App class="myAppDemoWT">
-        <pages>
-            <Page title="{i18n>homePageTitle}">
-                <headerContent>
-                    <Button
-                        icon="sap-icon://hello-world"
-                        press="onOpenDialog"
-                    />
-                </headerContent>
-                <content>
-                    <mvc:XMLView viewName="sample-app.view.HelloPanel" />
-                    <mvc:XMLView  viewName="sample-app.view.InvoiceList"/>
-                </content>
-            </Page>
-        </pages>
-    </App>
+		controllerName="sample-app.controller.App"
+		xmlns="sap.m"
+		xmlns:mvc="sap.ui.core.mvc"
+		displayBlock="true">
+	<App class="nyAppDemoWT" id="app"/>
 </mvc:View>
