--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -1,17 +1,16 @@
-<mvc:View  
-    controllerName="sample-app.controller.App"
-    xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc">
-    <Page title="{i18n>homePageTitle}">
-        <headerContent>
-            <Button icon ="sap-icon://hello-world"
-                    press="onOpenDialog"/>
-        </headerContent>
-
-        <content>
-            <mvc:XMLView viewName="sample-app.view.HelloPanel"/>
-            <mvc:XMLView viewName="sample-app.view.InvoiceList"/>
-        </content>
-    </Page>
-    
+<mvc:View
+		controllerName="sample-app.controller.App"
+		xmlns="sap.m"
+		xmlns:mvc="sap.ui.core.mvc">
+	<Page title="{i18n>homePageTitle}">
+		<headerContent>
+			<Button
+					icon="sap-icon://hello-world"
+					press="onOpenDialog"/>
+		</headerContent>
+		<content>
+			<mvc:XMLView viewName="sample-app.view.HelloPanel"/>
+			<mvc:XMLView viewName="sample-app.view.InvoiceList"/>
+		</content>
+	</Page>
 </mvc:View>
