--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,22 +1,15 @@
-<mvc:View xmlns="sap.m" xmlns:l="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc">
-  <Panel headerText="{i18n>panel1HeaderText}" class="sapUiResponsiveMargin" width="auto">
-    <content>
-      <Label text="{i18n>firstName}" class="sapUiSmallMargin" />
-      <Input value="{/firstName}" valueLiveUpdate="true" width="200px" enabled="{/enabled}" />
-      <Label text="{i18n>lastName}" class="sapUiSmallMargin" />
-      <Input value="{/lastName}" valueLiveUpdate="true" width="200px" enabled="{/enabled}" />
-      <CheckBox selected="{/enabled}" text="{i18n>enabled}" />
-    </content>
-  </Panel>
-  <Panel headerText="{i18n>panel2HeaderText}" class="sapUiResponsiveMargin" width="auto">
-    <content>
-      	<l:VerticalLayout>
-          <Label class="sapUiSmallMargin" text="{i18n>address}:" />
-          <Text class="sapUiSmallMargin" 
-                text="{/address/street}\n{/address/zip} {/address/city}\n{/address/country}" 
-                width="230px" />
-        </l:VerticalLayout>   
-    </content>
-  </Panel>
-
-</mvc:View> 
+<mvc:View
+	xmlns="sap.m"
+	xmlns:form="sap.ui.layout.form"
+	xmlns:mvc="sap.ui.core.mvc">
+	<Panel headerText="{i18n>panelHeaderText}" class="sapUiResponsiveMargin" width="auto">
+		<form:SimpleForm editable="true" layout="ColumnLayout">
+			<Label text="{i18n>firstName}"/>
+			<Input value="{/firstName}" valueLiveUpdate="true" width="200px" enabled="{/enabled}"/>
+			<Label text="{i18n>lastName}"/>
+			<Input value="{/lastName}" valueLiveUpdate="true" width="200px" enabled="{/enabled}"/>
+			<Label text="{i18n>enabled}"/>
+			<CheckBox selected="{/enabled}"/>
+		</form:SimpleForm>
+	</Panel>
+</mvc:View>
