--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,8 +1,12 @@
 <mvc:View
+	controllerName="sample-app-copy.controller.App"
 	xmlns="sap.m"
+	xmlns:core="sap.ui.core"
 	xmlns:form="sap.ui.layout.form"
-	xmlns:mvc="sap.ui.core.mvc">
-	<Panel headerText="{i18n>panelHeaderText}" class="sapUiResponsiveMargin" width="auto">
+	xmlns:l="sap.ui.layout"
+	xmlns:mvc="sap.ui.core.mvc"
+	core:require="{Currency: 'sap/ui/model/type/Currency'}">
+	<Panel headerText="{i18n>panel1HeaderText}" class="sapUiResponsiveMargin" width="auto">
 		<form:SimpleForm editable="true" layout="ColumnLayout">
 			<Label text="{i18n>firstName}"/>
 			<Input value="{/firstName}" valueLiveUpdate="true" width="200px" enabled="{/enabled}"/>
@@ -11,5 +15,37 @@
 			<Label text="{i18n>enabled}"/>
 			<CheckBox selected="{/enabled}"/>
 		</form:SimpleForm>
+	</Panel>
+	<Panel headerText="{i18n>panel2HeaderText}" class="sapUiResponsiveMargin" width="auto">
+		<content>
+			<l:HorizontalLayout>
+				<l:VerticalLayout>
+					<Label labelFor="address" text="{i18n>address}" showColon="true"/>
+					<FormattedText class="sapUiSmallMarginBottom"
+						htmlText="{/address/street}&lt;br&gt;{/address/zip} {/address/city}&lt;br&gt;{/address/country}"
+						id="address" width="200px"/>
+					<Link href="{
+							parts: [
+								'/firstName',
+								'/lastName'
+							],
+							formatter: '.formatMail'
+						}"
+						text="{i18n>sendEmail}"/>
+				</l:VerticalLayout>
+				<l:VerticalLayout>
+					<Label labelFor="salesAmount" text="{i18n>salesAmount}" showColon="true"/>
+					<Input description="{/currencyCode}" enabled="{/enabled}" id="salesAmount"
+						value="{
+							parts: [
+								{path: '/salesAmount'},
+								{path: '/currencyCode'}
+							],
+							type: 'Currency',
+							formatOptions: {showMeasure: false}
+						}" width="200px"/>
+				</l:VerticalLayout>
+			</l:HorizontalLayout>
+		</content>
 	</Panel>
 </mvc:View>
