Aggregation Binding yapıldı.

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -49,35 +49,17 @@
 		</content>
 	</Panel>
 	<Panel headerText="{i18n>panel3HeaderText}" class="sapUiResponsiveMargin" width="auto">
-		<List headerText="{i18n>productListTitle}" items="{products>/Products}">
-			<items>
-				<ObjectListItem
-					press=".onItemSelected"
-					type="Active"
-					title="{products>ProductName}"
-					number="{
-						parts: [
-							{path: 'products>UnitPrice'},
-							{path: '/currencyCode'}
-						],
-						type: 'Currency',
-						formatOptions: { showMeasure: false }
-					}"
-					numberUnit="{/currencyCode}">
-					<attributes>
-						<ObjectAttribute text="{products>QuantityPerUnit}"/>
-						<ObjectAttribute title="{i18n>stockValue}"
-							text="{
-								parts: [
-									{path: 'products>UnitPrice'},
-									{path: 'products>UnitsInStock'},
-									{path: '/currencyCode'}
-								],
-								formatter: '.formatStockValue'
-							}"/>
-					</attributes>
-				</ObjectListItem>
-			</items>
+		<List
+			id="ProductList"
+			headerText="{i18n>productListTitle}"
+			items="{
+				path: 'products>/Products',
+				factory: '.productListFactory'
+			}">
+			<dependents>
+				<core:Fragment fragmentName="sample-app-copy.view.ProductSimple" type="XML"/>
+				<core:Fragment fragmentName="sample-app-copy.view.ProductExtended" type="XML"/>
+			</dependents>
 		</List>
 	</Panel>
 	<Panel id="productDetailsPanel" headerText="{i18n>panel4HeaderText}" class="sapUiResponsiveMargin" width="auto">
